@@ -19,6 +19,9 @@ These people have translated thunar-archive-plugin to foreign languages.
  Szervác Attila <sas@321.hu>
   * hu translations
 
+ Andrey Fedoseev <andrey.fedoseev@gmail.com>
+  * ru translations
+
 
 Other contributors (sorted by name):
 ------------------------------------
