@@ -68,8 +68,8 @@ XDT_I18N([@LINGUAS@])
 dnl ***********************************
 dnl *** Check for required packages ***
 dnl ***********************************
-XDT_CHECK_PACKAGE([EXO], [exo-0.3], [0.3.1.4])
 XDT_CHECK_PACKAGE([THUNARX], [thunarx-1], [0.2.2])
+XDT_CHECK_PACKAGE([THUNAR_VFS], [thunar-vfs-1], [0.2.2])
 
 dnl ***********************************
 dnl *** Check for debugging support ***
