@@ -1,2 +1,2 @@
 # set of available languages (in alphabetic order)
-de hu
+de hu ru
